--- a/css/animate.css
+++ b/css/animate.css
@@ -46,8 +46,8 @@
 
 @-webkit-keyframes fade-up-top {
   0% {
-    -webkit-transform: translateY(-50px);
-    transform: translateY(-50px);
+    -webkit-transform: translateY(20vh);
+    transform: translateY(20vh);
     opacity: 0;
   }
   100% {
