--- a/css/common.css
+++ b/css/common.css
@@ -5,6 +5,13 @@ body {
 
 a {
     display: block;
+    color: #fff;
+    text-decoration: none;
+}
+
+a:hover{
+    color: #fff;
+    text-decoration: none;
 }
 
 ul{
