--- a/css/main.css
+++ b/css/main.css
@@ -4,3 +4,4 @@
 @import url(xl.css) only screen and (max-width:1299px);
 @import url(lg.css) only screen and (max-width:1199px);
 @import url(xs.css) only screen and (max-width:767px);
+@import url(xxs.css) only screen and (max-width:420px);
