--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
-@import url(normalize.css);
-@import url(common.css);
+/*@import url(normalize.css);*/
 @import url(animate.css);
+@import url(common.css);
 @import url(xl.css) only screen and (max-width:1299px);
 @import url(lg.css) only screen and (max-width:1199px);
 @import url(xs.css) only screen and (max-width:767px);
