--- a/css/common.css
+++ b/css/common.css
@@ -1,11 +1,11 @@
-html,
+/*html,
 body {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
-}
+}*/
 
 body {
     font-family: 'Noto Sans', 'Noto Sans CJK TC', sans-serif;
@@ -22,6 +22,17 @@ a:hover {
     text-decoration: none;
 }
 
+/* safari style*/
+
+a[type='button'] {
+    border-radius: 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+}
+
+
 ul {
     padding: 0;
     list-style-type: none;
@@ -34,14 +45,6 @@ ul {
     height: 100vh;
 }
 
-/* safari style */
-/*a[type="button"] {
-    border-radius: 0;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background-color: transparent;
-}*/
 
 /* header */
 
