--- a/css/common.css
+++ b/css/common.css
@@ -16,7 +16,7 @@ body {
     font-family: 'Noto Sans', 'Noto Sans CJK TC', sans-serif;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 a {
