--- a/css/common.css
+++ b/css/common.css
@@ -53,6 +53,10 @@ ul {
     height: 100vh;
 }
 
+@font-face {
+    font-family: Mulish;
+    src: url(../font/Mulish-Regular.ttf) format('truetype');
+}
 
 /* header */
 
@@ -68,7 +72,7 @@ header .container-fluid {
 }
 
 .navbg {
-    background-color: #232e61;
+    background-color: #232e6100;
 }
 
 .btn-style {
@@ -79,6 +83,9 @@ header .container-fluid {
 .head-bar-btn {
     background-color: #e3332b;
     border-color: #e3332b;
+    padding: 0.625rem;
+    font-size: 0.875rem;
+    line-height: 1.3;
 }
 
 .head-bar-btn:hover {
@@ -100,6 +107,8 @@ header .container-fluid {
 
 .navbar-nav li a {
     color: #fff;
+    font-family: 'Noto Sans CJK TC';
+    font-size: 0.875rem;
     font-weight: bold;
 }
 
@@ -115,21 +124,24 @@ header .container-fluid {
 
 #mainVision {
     background: linear-gradient(120.48deg, #232E61 0%, #050A2D 68.88%);
-
-    min-height: 750px;
+    height: 800px;
+    /*
     max-height: 800px;
-
+    min-height: 750px;
+    
     padding-top: 5%;
     padding-right: 3%;
     padding-left: 3%;
     padding-bottom: 0%;
+    */
 }
 
 #mVcontent {
     background-image: url(../img/ERP.svg);
     background-size: auto;
     background-repeat: no-repeat;
-    background-position: top 7vh right 2vw;
+    background-position: top 5vh right 3.16vw;
+    margin-top: 2.5%;
 }
 
 
@@ -138,7 +150,7 @@ header .container-fluid {
     left: 5%;
     top: 28%;
     z-index: 10;*/
-    max-width: 68%;
+    max-width: 60%;
     margin-left: 7%;
 }
 
@@ -149,15 +161,15 @@ header .container-fluid {
 
 .mVTitle {
     font-style: normal;
-    font-weight: 700;
+    font-weight: 400;
 
-    font-size: 3rem;
+    font-size: 3.125rem;
     padding-top: 14%;
     letter-spacing: 2px;
 }
 
 .mVDes {
-    font-size: 1.3vw;
+    font-size: 1.1rem;
     word-break: break-all;
     padding-top: 1%;
     letter-spacing: 1px;
@@ -173,10 +185,14 @@ header .container-fluid {
     height: 230px;
 
     position: relative;
+
+    font-family: Mulish;
+    font-weight: normal;
 }
 
 #scroll-down {
-    margin-top: 3%;
+    margin-top: 7.2%;
+    margin-left: 3.8%;
     padding-top: 4%;
 }
 
@@ -206,13 +222,13 @@ header .container-fluid {
 }
 
 #scroll-down:hover::after {
-    top: 45%;
+    top: 48%;
     content: 'What’s the special ?';
     color: #fff;
     background-image: none;
     width: 150px;
     height: 10px;
-    font-size: 14px;
+    font-size: 1rem;
 }
 
 /* main */
@@ -220,20 +236,22 @@ header .container-fluid {
 .block-title {
     background-color: #001D7C;
     color: #fff;
-    padding: 16px;
+    font-size: 1.25rem;
+    padding: 0.75rem 1.25rem;
     display: table-caption;
-    margin-bottom: 48px;
+    /*margin-bottom: 48px;*/
 
     position: absolute;
     z-index: 2;
-    top: 9%;
-    left: 13%;
+    top: 19.9%;
+    left: 9%;
 
 }
 
 .block-title span {
-    font-size: 2vw;
-    letter-spacing: 2px;
+    font-size: 1.875rem;
+    font-weight: 500;
+    letter-spacing: 1px;
 }
 
 .prd-block {
@@ -241,11 +259,11 @@ header .container-fluid {
 }
 
 #prd_1 .prd-block {
-    padding: 15% 10% 15% 13%;
+    padding: 27.8% 8.9% 20% 8.9%;
 }
 
 #prd_2 .prd-block {
-    padding: 15% 10% 8% 13%;
+    padding: 27.8% 8.9% 20% 8.9%;
 }
 
 .prd-vis {
@@ -255,8 +273,8 @@ header .container-fluid {
     height: 100%;*/
 
     position: absolute;
-    top: 2%;
-    left: 9%;
+    top: 11%;
+    left: 4%;
     z-index: 1;
 
 }
@@ -265,18 +283,33 @@ header .container-fluid {
     width: 140px;
 }
 
-.prd-img {}
-
 .prd-img img {
     max-width: 100%;
+    width: 27.625rem;
+}
+
+.prd-text {
+    padding-left: 1.393%;
 }
 
 .prd-text h1 {
-    font-weight: bold;
+    font-size: 3.125rem;
+    line-height: 98%;
+    margin-bottom: 2.5rem;
 }
 
 .prd-text p {
-    max-width: 85%;
+    font-size: 1.125rem;
+    margin-bottom: 2rem;
+}
+
+.prd-text button {
+    margin-top: 0.75rem;
+    padding: 0.875rem 1.875rem;
+}
+
+.none-opacity {
+    opacity: 0;
 }
 
 #prd_end {
@@ -287,7 +320,6 @@ header .container-fluid {
 #scroll-top {}
 
 #scroll-top::after {
-    height: 100vh;
     content: '';
     background-image: url(../img/arrow.png);
     width: 67px;
@@ -366,7 +398,7 @@ footer {
 #logoBlock .address {
     padding-top: 10%;
     padding-bottom: 4%;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 #logoBlock .address::after {
@@ -403,6 +435,8 @@ footer {
 }
 
 .footext {
+    font-family: 'Mulish';
     display: block;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
+    opacity: .7;
 }
