--- a/css/xxs.css
+++ b/css/xxs.css
@@ -1,3 +1,7 @@
+#mainVision {
+    padding-top: 0%;
+}
+
 #mVcontent {
     background-image: url(../img/ERPxs.png);
     background-size: 55%;
@@ -11,8 +15,9 @@
 
 .mVTitle {
     padding-top: 28%;
-    font-size: 2.5rem;
+    font-size: 1.875rem;
     letter-spacing: 0px;
+    max-width: 73%;
 }
 
 .mVDes {
@@ -20,8 +25,39 @@
     padding-bottom: 35%;
 }
 
+.scrollBtnStyle {
+    width: 140px;
+    height: 140px;
+}
+
 #scroll-down {
-    margin-left: 5%;
+    margin-top: 18.3%;
+    margin-left: 8%;
+}
+
+#scroll-down::after,
+#scroll-top::after {
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 35%;
+    top: 35%;
+}
+
+
+#scroll-down:hover::after,
+#scroll-top:hover::after {
+    top: 45%;
+    color: #fff;
+    font-size: 0.625rem;
+    width: 130px;
+}
+
+#scroll-top::after {
+    top: 21%;
+}
+
+#scroll-top:hover::after {
+    top: 48%;
 }
 
 #prd_1 .prd-block {
@@ -43,13 +79,23 @@
 }
 
 .prd-vis img {
-    width: 85px;
+    width: 80px;
 }
 
+/*.prd-img img {
+    width: 18.5rem;
+}*/
+
 .prd-content-block .prd-text h1 {
-    font-size: 1.7rem;
-    padding-top: 6%;
-    margin-bottom: 4%;
+    font-size: 1.5rem;
+    font-weight: 700;
+    padding-top: 9%;
+    margin-bottom: 8%;
+}
+
+#prd_end {
+    padding-right: 6%;
+    padding-bottom: 27%;
 }
 
 #logoBlock .container,
