--- a/css/xs.css
+++ b/css/xs.css
@@ -5,6 +5,24 @@
     background-position: top 3vh right 2vw;
 }
 
+#navbarCollapse {
+    position: absolute;
+    top: 95%;
+    left: 0%;
+    background: #1b2452;
+    z-index: 1;
+}
+
+#navbarCollapse .nav-item {
+    padding-top: 3%;
+    padding-bottom: 1%;
+}
+
+#navbarCollapse button {
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
 .mVTitle {
     font-weight: 500;
     font-size: 4rem;
@@ -59,12 +77,12 @@
     left: 10%;
 }
 
-.prd-content-block .prd-text h1{
+.prd-content-block .prd-text h1 {
     font-size: 2.1rem;
 }
 
 #logoBlock .container,
-#footerList .container{
+#footerList .container {
     padding-left: 0%;
     padding-right: 0%;
 }
@@ -90,7 +108,8 @@
     padding-bottom: 6%;
     font-size: 1.5rem;
 }
-#logoBlock p:not(.address){
+
+#logoBlock p:not(.address) {
     font-size: 1.3rem;
     letter-spacing: 2px;
 }
@@ -100,6 +119,6 @@
     padding-bottom: 30px;
 }
 
-.footext{
+.footext {
     text-align: center;
 }
