--- a/pj_aietec/css/style.css
+++ b/pj_aietec/css/style.css
@@ -165,10 +165,10 @@ nav#idxheadrow {
 	-moz-transition: all 0.5s ease-out 0s;
 }
 a.navbar-brand img {
-	height: 90px;
+	height: 33px;
 }
 .affix a.navbar-brand img {
-	height: 70px;
+	height: 28px;
 }
 #idxheadrow.affix #main-nav {
 	border: none;
@@ -182,16 +182,19 @@ a.navbar-brand img {
 #mainbanner {
 /*margin-top: 7%;*/
 }
+.owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev, .owl-carousel button.owl-dot {
+	background: rgba(255, 255, 255, 0) !important;
+}
 .banner-icon {
-	font-size: 36px;
-	color: #fff;
+	font-size: 3rem;
+    color: #fff;
 	text-shadow: 0px 0px 10px #434343;
-	background: rgba(37,56,130,0.5);
+	background: rgb(4,110,184,0.5);
 	padding: 0px 5px 10px 5px;
 	border-radius: 10px;
 }
 .banner-icon:hover {
-	background: rgba(37,56,130,1);
+	background: rgb(4,110,184,1);
 }
 .owl-nav button {
 	position: absolute;
@@ -202,10 +205,10 @@ a.navbar-brand img {
 	transition: all 0.3s ease-in-out;
   }
   .owl-nav button.owl-prev {
-	left: 0;
+	left: 1%;
   }
   .owl-nav button.owl-next {
-	right: 0;
+	right: 1%;
   }
   
   .owl-dots {
@@ -427,7 +430,7 @@ span {
 
 @media only screen and (min-width: 1170px) {
 #google-container {
-	height: 300px;
+	height: 200px;
 }
 }
 #cd-google-map {
@@ -468,7 +471,7 @@ span {
 
 @media only screen and (min-width: 768px) {
 #cd-zoom-in, #cd-zoom-out {
-	margin-left: 50px;
+	margin-left: 40%;
 }
 }
 #cd-zoom-in {
@@ -479,7 +482,7 @@ span {
 
 @media only screen and (min-width: 768px) {
 #cd-zoom-in {
-	margin-top: 50px;
+	margin-top: 40%;
 }
 }
 #cd-zoom-out {
@@ -503,15 +506,18 @@ span {
 #index-prd .pg-tit {
 	margin-bottom: 45px;
 }
+#index-prd .item img {
+	border-radius: 10px;
+}
 #index-company, #index-prd {
-	padding: 2% 0% 4% 0%;
+	padding: 2% 0% 2% 0%;
 }
 #index-company {
 	color: #fff;
-	background: #de823e;
+	background: #275896;
 }
 #index-prd {
-	background: url(../images/idx-c-bg.png) fixed top center;
+	background: url(../images/b2.png) fixed top center;
 }
 #idx-content .news-img {
 	text-align: center;
@@ -543,14 +549,17 @@ span {
 	white-space: nowrap;
 	overflow: hidden;
 }
+.news-txt {
+	text-align: center;
+}
 .news-content {
 	background: rgba(0, 0, 0, 0.45);
 	padding: 10px 15px;
 }
 /*-------------------------*/
 footer {
-	background: #253882;
-	padding: 3% 0% 0% 0%;
+	background: #5d5d5d;
+	padding: 2% 0% 0% 0%;
 }
 footer .pg-tit {
 	margin: 15px 0px;
@@ -561,15 +570,19 @@ footer .pg-tit {
 	padding: 0% 0% 5% 0%;
 	height: 250px;
 }
+.contact li.name {
+	font-weight: bold;
+    font-size: 25px;
+}
 .contact li {
 	padding: 5px 0px;
+	/* font-weight: bold; */
+	color: #fff;
 	font-size: 16px;
-	font-weight: bold;
-	color: #2D2C2C;
 }
 #copy {
 	text-align: center;
-	padding: 25px 0;
+	padding: 15px 0;
 	background: #454545;
 	color: #fff;
 }
